--- a/philosophy.html
+++ b/philosophy.html
@@ -4,7 +4,7 @@ dark_navbar: true
 ---
 
 <section class="card card-full">
-  <div class="full-bg fade-gray" style="background-image: url('/images/philosophy-top-bg.jpg');"></div>
+  <div class="full-bg fade-gray" style="background-image: url('{{ site.baseurl }}/images/philosophy-top-bg.jpg');"></div>
 
   <div class="container text-center white-on-black">
     <div class="row">
@@ -16,7 +16,7 @@ dark_navbar: true
 </section>
 
 <section class="card card-full white-on-black">
-  <div class="full-bg fade-blue" style="background-image: url('/images/philosophy-mission-bg.jpg');"></div>
+  <div class="full-bg fade-blue" style="background-image: url('{{ site.baseurl }}/images/philosophy-mission-bg.jpg');"></div>
 
 	<div class="container">
 		<div class="col-sm-4 col-sm-offset-1">
@@ -30,7 +30,7 @@ dark_navbar: true
 <section class="card card-half-height">
 	<div class="container">
     <div class="col-sm-3 col-sm-offset-1 text-center">
-      <img src="/images/solar-decathlon.jpg" alt="" class="img-responsive img-circle">
+      <img src="{{ site.baseurl }}/images/solar-decathlon.jpg" alt="" class="img-responsive img-circle">
     </div>
 		<div class="col-sm-7">
 			<h2>Solar Decathlon 2015</h2>
@@ -43,7 +43,7 @@ dark_navbar: true
 </section>
 
 <section class="card card-full">
-  <div class="full-bg fade-white" style="background-image: url('/images/philosophy-philosophy-bg.jpg');"></div>
+  <div class="full-bg fade-white" style="background-image: url('{{ site.baseurl }}/images/philosophy-philosophy-bg.jpg');"></div>
 
 	<div class="container">
 		<div class="col-sm-8 col-sm-offset-2">
@@ -61,7 +61,7 @@ dark_navbar: true
 </section>
 
 <div class="card card-full white-on-black">
-  <div class="full-bg fade-gray" style="background-image: url('/images/kitchen.jpg');"></div>
+  <div class="full-bg fade-gray" style="background-image: url('{{ site.baseurl }}/images/kitchen.jpg');"></div>
   <div class="container">
     <div class="col-sm-8 col-sm-offset-2">
       <h2>Real-Time Updates</h2>
@@ -72,7 +72,7 @@ dark_navbar: true
 </div>
 
 <div class="card card-full white-on-black">
-  <div class="full-bg fade-dark-orange" style="background-image: url('/images/bathroom.jpg');"></div>
+  <div class="full-bg fade-dark-orange" style="background-image: url('{{ site.baseurl }}/images/bathroom.jpg');"></div>
   <div class="container">
     <div class="col-sm-8 col-sm-offset-2">
       <h2>Solar People</h2>
