--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: card-deck
 ---
 
 <section class="card card-full">
-  <div class="full-bg fade-gray" style="background-image: url('/images/big-sur.jpg');"></div>
+  <div class="full-bg fade-gray" style="background-image: url('{{ site.baseurl }}/images/big-sur.jpg');"></div>
   <div class="container text-center white-on-black">
     <div class="row">
       <div class="col-sm-10 col-sm-offset-1 pad2y">
