--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ layout: card-deck
     </div>
     <div class="row">
       <div class="col-sm-4 col-sm-offset-4">
-        <a href="/philosophy/" class="btn btn-outline-white btn-poofy-lg pad1y btn-block">See what we're doing</a>
+        <a href="{{ site.baseurl }}/philosophy/" class="btn btn-outline-white btn-poofy-lg pad1y btn-block">See what we're doing</a>
       </div>
     </div>
   </div>
