Timeline on sponsors page, solar d logo on footer

--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@ layout: article
 ---
 
 {% for post in site.posts %}
-  <section class="blog card card-shorty">
+  <section class="blog post card card-shorty">
     {% if post.background %}
       <div class="full-bg" style="background-image: url('{{ post.background }}');"></div>
     {% endif %}
