--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@ layout: card-deck
 ---
 
 <section class="card card-full">
-  <div class="full-bg fade-gray" style="background-image: url('{{ site.baseurl }}/images/big-sur.jpg');"></div>
+  <div class="full-bg fade-dark-orange" style="background-image: url('{{ site.baseurl }}/images/home/construction.jpg');"></div>
   <div class="container text-center white-on-black">
     <div class="row">
       <div class="col-sm-10 col-sm-offset-1 pad2y">
-        <h1 class="text-too-big">Stanford students are designing the solar home of the future.</h1>
+        <h1 class="text-too-big">eDen | Welcome home</h1>
       </div>
     </div>
     <div class="row">
       <div class="col-sm-4 col-sm-offset-4">
-        <a href="{{ site.baseurl }}/philosophy/" class="btn btn-outline-white btn-poofy-lg pad1y btn-block">See what we're doing</a>
+        <a href="{{ site.baseurl }}/philosophy/" class="btn btn-outline-white btn-poofy-lg pad1y btn-block">See what the team is doing</a>
       </div>
     </div>
   </div>
