--- a/philosophy.html
+++ b/philosophy.html
@@ -35,7 +35,7 @@ dark_navbar: true
 		<div class="col-sm-7">
 			<h2>Solar Decathlon 2015</h2>
 
-			<p class="prose">Solar Decathlon is a two-year project sponsored by the U.S. Department of Energy to promote solar technology and energy-efficient construction. In 2013, Stanford placed fifth overall.</p>
+			<p class="prose">Solar Decathlon is a biennial project sponsored by the U.S. Department of Energy to promote solar technology and energy-efficient construction. In 2013, Stanford placed fifth overall.</p>
       <br>
 			<a href="http://www.solardecathlon.gov" class="btn btn-poofy-lg btn-outline-primary">Visit their website</a>
 		</div>
@@ -49,7 +49,7 @@ dark_navbar: true
 		<div class="col-sm-8 col-sm-offset-2">
       <h2>Philosophy</h2>
 
-      <p class="prose">We are an award-winning technology product design and development company. We define next-generation products and user experiences. This is our quest for mastery. We focus those products and experiences on preferable outcomes for society. biggest design challenge: creating a world-class design company. It all rests upon attracting the best designers, strategists, engineers, and researchers in the world. Then comes an effort to continually craft an environment.</p>
+      <p class="prose">The Stanford team is unique in its user-centered design methodology. We conduct user interviews, create personas, and partner with real people to check all our design decisions against data rather than assumptions. We are the only team to partner with an end-user who will live in the house after the competition and who we partner with to make an enjoyable living experience.</p>
     </div>
 	<div>
 </section>
@@ -66,18 +66,7 @@ dark_navbar: true
     <div class="col-sm-8 col-sm-offset-2">
       <h2>Real-Time Updates</h2>
 
-      <p class="prose">Our team is ideating a system of sensors that collect real-time data, presenting it through visual display and installed artwork throughout the house. These panels around the home would allow the homeowners to adjust temperatures, lighting, and other critical home controls, while receiving feed-back on their energy and water consumption.</p>
-    </div>
-  </div>
-</div>
-
-<div class="card card-full white-on-black">
-  <div class="full-bg fade-dark-orange" style="background-image: url('{{ site.baseurl }}/images/bathroom.jpg');"></div>
-  <div class="container">
-    <div class="col-sm-8 col-sm-offset-2">
-      <h2>Solar People</h2>
-
-      <p class="prose">Finally, to stay consistent with our motto of creating not just solar homes, but solar people, we&rsquo;ve formed a team of interaction designers out of Stanford&rsquo;s Hasso Plattner Institute of Design to re- engineer how homeowners interact with basic daily tasks, such as using the bathroom or turning on a light which. The process of developing these devices will begin with need-finding missions across campus, speaking with local homeowners about daily behavior within the home, and then prototyping and developing devices to gently educate homeowners about hoe to live more sustainably.</p>
+      <p class="prose">Our team is ideating a system of sensors that collect real-time data, presenting it through visual display and installed artwork throughout the house. These panels around the home would allow the homeowners to adjust temperatures, lighting, and other critical home controls. This feedback would encourage efficient behavior and help change wasteful habits.</p>
     </div>
   </div>
 </div>
