--- a/team.html
+++ b/team.html
@@ -24,3 +24,14 @@ layout: card-deck
     </div>
   </div>
 </section>
+
+<div class="card card-full white-on-black">
+  <div class="full-bg fade-dark-orange" style="background-image: url('{{ site.baseurl }}/images/bathroom.jpg');"></div>
+  <div class="container">
+    <div class="col-sm-8 col-sm-offset-2">
+      <h2>Solar People</h2>
+
+      <p class="prose">To stay consistent with our motto of creating not just solar homes, but solar people, we&rsquo;ve formed a team of interaction designers out of Stanford&rsquo;s Hasso Plattner Institute of Design to re- engineer how homeowners interact with basic daily tasks, such as using the bathroom or turning on a light which. The process of developing these devices will begin with need-finding missions across campus, speaking with local homeowners about daily behavior within the home, and then prototyping and developing devices to gently educate homeowners about hoe to live more sustainably.</p>
+    </div>
+  </div>
+</div>
